--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,12 +9,12 @@
 	<meta name="author" content="" />
 	<link rel="icon" href="/image/favicon.png" />
 
-	<!-- Bootstrap core CSS -->
-	<link th:href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-	<link th:href="/webjars/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
 	
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" type="text/css"/>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<!-- Custom styles for this template -->
-	<link th:href="/css/style.css" rel="stylesheet" />
+	<link th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
 	<header>
